Separate P25 call and grant metrics