@@ -49,10 +49,9 @@ tools\sqlite-migrations\p25-history\migrate-v11-to-v12-system-identity.ps1 `
   -AppHome C:\path\to\sdrtrunk-vce
 ```
 
-### Reset Stats Server schema to v13
+### Reset Stats Server schema
 
-Rebuilds only the sdrtrunk-vce Stats Server tables, indexes, and views using the current v13 current-state and
-observation-summary schema:
+Rebuilds only the sdrtrunk-vce Stats Server tables, indexes, and views using the current schema:
 
 - keeps SDRTrunk configuration, channels, aliases, streams, preferences, and vault data
 - backs up the database beside the original file first
@@ -66,27 +65,15 @@ not migrated.
 macOS/Linux:
 
 ```bash
-tools/sqlite-migrations/p25-history/reset-stats-schema-to-v13.sh /path/to/sdr-trunk /path/to/sdrtrunk.sqlite
+tools/sqlite-migrations/p25-history/reset-stats-schema.sh /path/to/sdr-trunk /path/to/sdrtrunk.sqlite
 ```
 
 Windows PowerShell:
 
 ```powershell
-tools\sqlite-migrations\p25-history\reset-stats-schema-to-v13.ps1 `
+tools\sqlite-migrations\p25-history\reset-stats-schema.ps1 `
   -InstallDir C:\path\to\sdrtrunk-vce `
   -Database C:\path\to\sdrtrunk.sqlite
-```
-
-### Normalize Stats Server hits to grants
-
-Use the external `P25HistoryNormalizeGrantHits.java` tool once when upgrading a database whose `hits` counters
-previously counted every decoded action. Stop SDRTrunk first. The tool backs up the database, sets `hits` equal to the
-existing `grant_count` in every lifetime and hourly summary table, and validates the result. It does not alter the
-schema or SDRTrunk configuration.
-
-```bash
-java --enable-native-access=ALL-UNNAMED -cp "/path/to/sdr-trunk/lib/*" \
-  tools/sqlite-migrations/p25-history/P25HistoryNormalizeGrantHits.java /path/to/sdrtrunk.sqlite
 ```
 
 ### P25 history v9 to v10
